[package]
name = "mrrper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.5.0"
once_cell = "1.19.0"
poise = "0.6.1"
redis = "0.27.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
reqwest_cookie_store = "0.8.0"
ring = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.11.0"
tracing = "0.1.40"
